--- a/IdentityServer4_Test/IdentityServer4_Test.csproj
+++ b/IdentityServer4_Test/IdentityServer4_Test.csproj
@@ -6,6 +6,9 @@
 
   <ItemGroup>
     <PackageReference Include="IdentityServer4" Version="3.0.2" />
+    <PackageReference Include="Serilog" Version="2.9.0" />
+    <PackageReference Include="Serilog.AspNetCore" Version="3.4.0" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
   </ItemGroup>
 
 </Project>
